# rust-ghactions

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-actions-auto-publish-crates.yml  github-actions-demo.yml  main.yml  new.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
src/: main.rs
