[package]
name = "rust-ghactions"
version = "0.1.3"
edition = "2021"
description = "test-random-cr8"
license = "MIT"
documentation = "https://github.com/cburkhardt27/rust-ghactions/docs"
homepage = "https://github.com/cburkhardt27/rust-ghactions"
repositor = "https://github.com/cburkhardt27/rust-ghactions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
